--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome from out home page.</h1>
+<div class="home-callout text-center container-fluid">
+  <h1>Welcome to Saas</h1>
+  <h3>Where we provide software as a service</h3>
+</div>
