--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,8 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
   // typography styles
  h1, h2, h3 {
@@ -44,6 +46,7 @@
  padding-bottom:100px;
  color:white;
 }
+
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
  color:white;
  &:hover {
