Updated about page and logo style

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,10 @@
  border:none;
 }
 
+.navbar-brand {
+ font-family:"Open Sans", sans-serif;
+ font-weight: 800;
+}
  //background gradient
 .home-callout, .navbar {
  background: #4AC29A;  /* fallback for old browsers */
