--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,8 @@
+<div class="container text-center">
 <h1>About Page</h1>
+<p>We are SaaS App.  Our company focuses on creating an 
+great service through our software.
+
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, quos, expedita, esse, maxime fugit numquam repudiandae explicabo voluptas est aspernatur molestias obcaecati hic animi sit atque. Minus, aperiam neque itaque.
+</p>
+</div>
