Trigger the mailer from the controller file

--- a/app/views/contact_mailer/contact_mailer.html.erb
+++ b/app/views/contact_mailer/contact_mailer.html.erb
@@ -3,10 +3,10 @@
   <head></head>
   <body>
     <p>You have received a new message from the websites contact
-    form
-    <%= '#{ @name }', '#{ @email }'%></p>
+    form from:
+    <%= "#{ @name }, #{ @email }."%></p>
     <p>
-      <%= '#{ @body }' %>
+      <%= "#{ @body }" %>
     </p>
   </body>
 </html>
