Hide the flash for login & logout

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,12 +62,16 @@
  color:white;
 }
 
+.alert-notice {
+  display: none;
+}
+
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
  color:white;
  &:hover {
   color:white;
   opacity: 0.75;
  }
-}
 
+}
 
