--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,6 +66,9 @@
   display: none;
 }
 
+.home-sign-up-links {
+ margin-top: 30px;
+}
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
  color:white;
  &:hover {
