--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,22 @@
   <h1>Welcome to Saas</h1>
   <h3>Where we provide software as a service</h3>
 </div>
+<div class="container home-sign-up-links">
+  <div class = "row">
+    <div class = "col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basic membership link</h2>
+        <h4>Sign up for free and get basic access to the community.</h4>
+        <br>
+        <%= link_to "Sign up with Basic", "#", class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class = "col-md-6">
+      <div class="well">
+        <h2 class="text-center">Pro membership link</h2>
+        <h4>Sign up for the pro account at $10/month to get access to the community and the contact information</h4>
+        <%= link_to "Sign up with Pro", "#", class: 'btn btn-success btn-lg btn-block' %>
+      </div>
+    </div>
+  </div>
+</div>
