--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class = "container">
-  <div class = "row">
-    <div class = "col-md-6 col-md-offset-3">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
       <div class="text-center">
         <% if params[:plan] == '2' %>
           <h1>Pro Account</h1>
@@ -8,14 +8,15 @@
         <% else %>
           <h1>Basic Account</h1>
           <p>Sign up for free and get basic access to the community.</p>
-      <% end %>
-      <div class = "well">
+        <% end %>
+      </div>
+      <div class="well">
         <h2>Sign up</h2>
-          <%if params[:plan] == '2'%>
-            <%= render "pro_form" %>
-          <% else %>
-            <%= render "basic_form" %>
-          <% end %>
+        <% if params[:plan] == '2' %>
+          <%= render "pro_form" %>
+        <% else %>
+          <%= render "basic_form" %>
+        <% end %>
         <%= render "devise/shared/links" %>
       </div>
     </div>
