--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,23 +2,45 @@
   <h1>Welcome to Saas</h1>
   <h3>Where we provide software as a service</h3>
 </div>
+
 <div class="container home-sign-up-links">
   <div class = "row">
-    <div class = "col-md-6">
-      <div class="well">
-        <h2 class="text-center">Basic membership link</h2>
-        <h4>Sign up for free and get basic access to the community.</h4>
-        <br>
-        <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan), class: 'btn btn-primary btn-lg btn-block' %>
+    <% if user_signed_in? %>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">Your Profile</h2>
+            <% if current_user.profile %>
+              <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block'%>
+              <%= link_to "View your profile", user_path( current_user.id ), class: 'btn btn-default btn-lg btn-block'%>
+            <% else %>
+              <p>Create your profile so you can share your information with the community.</p>
+              <%= link_to "Create your profile!", new_user_profile_path(user_id: current_user.id), class:"btn btn-default btn-lg btn-block" %>
+            <% end %>
+        </div>
       </div>
-    </div>
-    <div class = "col-md-6">
-      <div class="well">
-        <h2 class="text-center">Pro membership link</h2>
-        <h4>Sign up for the pro account at $10/month to get access to the community and the contact information</h4>
-        <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan), class: 'btn btn-success btn-lg btn-block' %>
+      <div class="col-md-6">
+        <div class="well">
+          <h2 class="text-center">The Community</h2>
+            <p>Visit the community to meet others!</p>
+              <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block'%>
+        </div>
       </div>
-    </div>
+    <% else %>
+      <div class = "col-md-6">
+        <div class="well">
+          <h2 class="text-center">Basic membership link</h2>
+          <h4>Sign up for free and get basic access to the community.</h4>
+          <br>
+          <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan), class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+      </div>
+      <div class = "col-md-6">
+        <div class="well">
+          <h2 class="text-center">Pro membership link</h2>
+          <h4>Sign up for the pro account at $10/month to get access to the community and the contact information</h4>
+          <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan), class: 'btn btn-success btn-lg btn-block' %>
+        </div>
+      </div>
+    <% end %>  
   </div>
-  <%= link_to "Create your profile!", new_user_profile_path(user_id: current_user.id) if user_signed_in? %>
 </div>
