--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-<h1>About Page</h1>
+<h1>About Us</h1>
 <p>We are SaaS App.  Our company focuses on creating an 
 great service through our software.
 
